# lazy-imports-lite

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  timing_test.py
.github/workflows/: ci.yml
src/lazy_import_lite/: _hooks.py  _loader.py  _transformer.py
src/lazy_imports_lite/: __init__.py  __main__.py  _globals.py  _hooks.py  _loader.py  _transformer.py  _utils.py
tests/: test_cli.py  test_exec.py  test_globals.py  test_loader.py  test_transformer.py
